fixed footer spacing

--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -75,3 +75,9 @@ footer {
         text-align: left;
     }
 }
+
+@media screen and (min-width:1100px) {
+    footer {
+        margin:0  4rem;
+    }
+}
